bugfix: set borderbox to prevent overflow from memberslist

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -13,6 +13,7 @@
   height: 100%;
   padding: 20px;
   background-color: #2e3135;
+  box-sizing: border-box;
 }
 
 
